--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -165,7 +165,7 @@
 }
 
 #clearFiltersExternal {
-  background-color: var(--dropdown-bg, #1e1e1e);
+  background-color: var(--card-bg)
   color: var(--dropdown-text, #fff);
   border: 2px solid var(--accent);
   border-left: none;
