--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1003,9 +1003,8 @@ fetch('final_workshop_db.json')
     document.getElementById('results').innerHTML = '<li>Error loading database.</li>';
   });
 
-// --- Dropdowns ---
+// --- Dropdown Elements ---
 const dropdownSelected = document.getElementById('dropdownSelected');
-dropdownSelected.textContent = 'Search By: Item Name';
 const dropdownOptions = document.getElementById('dropdownOptions');
 const sortSelected = document.getElementById('sortSelected');
 const sortOptions = document.getElementById('sortOptions');
@@ -1013,45 +1012,45 @@ const filtersButton = document.getElementById('filtersButton');
 const filtersOptions = document.getElementById('filtersOptions');
 const clearFiltersBtn = document.querySelector('.clear-filters');
 
+// Set initial text for search dropdown
+dropdownSelected.textContent = 'Search By: Item Name';
+
+// --- Helper to close everything ---
 function closeAllDropdowns() {
   dropdownOptions.style.display = 'none';
   dropdownSelected.classList.remove('open');
+  
   sortOptions.style.display = 'none';
   sortSelected.classList.remove('open');
+  
   filtersOptions.style.display = 'none';
-  filtersButton.classList.remove('open')
+  filtersButton.classList.remove('open');
 }
 
-dropdownSelected.addEventListener('click', e => {
-  e.stopPropagation();
-  const isOpen = dropdownOptions.style.display === 'block';
-  closeAllDropdowns();
-  if (!isOpen) {
-    dropdownOptions.style.display = 'block';
-    dropdownSelected.classList.add('open');
-  }
-});
+// --- Event listeners for toggling dropdowns ---
+function setupDropdown(button, options) {
+  button.addEventListener('click', e => {
+    e.stopPropagation();
+    const isOpen = options.style.display === 'block';
+    closeAllDropdowns();
+    if (!isOpen) {
+      options.style.display = 'block';
+      button.classList.add('open');
+    }
+  });
 
-sortSelected.addEventListener('click', e => {
-  e.stopPropagation();
-  const isOpen = sortOptions.style.display === 'block';
-  closeAllDropdowns();
-  if (!isOpen) {
-    sortOptions.style.display = 'block';
-    sortSelected.classList.add('open');
-  }
-});
+  options.addEventListener('click', e => e.stopPropagation());
+}
 
+// Apply same logic to all three dropdowns
+setupDropdown(dropdownSelected, dropdownOptions);
+setupDropdown(sortSelected, sortOptions);
+setupDropdown(filtersButton, filtersOptions);
+
+// Close all dropdowns if clicking outside
 document.addEventListener('click', closeAllDropdowns);
 
-filtersButton.addEventListener('click', e => {
-  e.stopPropagation();
-  const isOpen = filtersOptions.style.display === 'block';
-  filtersOptions.style.display = isOpen ? 'none' : 'block';
-});
-
-filtersOptions.addEventListener('click', e => e.stopPropagation());
-
+// --- Filters logic ---
 clearFiltersBtn.addEventListener('click', () => {
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
 });
