--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1051,10 +1051,14 @@ setupDropdown(filtersButton, filtersOptions);
 document.addEventListener('click', closeAllDropdowns);
 
 // --- Filters logic ---
-clearFiltersBtn.addEventListener('click', () => {
-  e.stopPropagation();
+clearFiltersBtn.addEventListener('click', (e) => {
+  e.stopPropagation(); 
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
+  // optional: keep dropdown visibly open
+  filtersOptions.style.display = 'block';
+  filtersButton.classList.add('open');
 });
+
 
 filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
   btn.addEventListener('click', () => btn.classList.toggle('selected'));
