--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -585,6 +585,7 @@
   width: 100%;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
+  border-top: none;
   border-radius: 0 0 6px 6px; 
   box-sizing: border-box;
   z-index: 200;
