--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1004,9 +1004,9 @@ fetch('final_workshop_db.json')
     document.getElementById('results').innerHTML = '<li>Error loading database.</li>';
   });
 
-// --- Elements ---
+// --- Dropdowns ---
 const dropdownSelected = document.getElementById('dropdownSelected');
-dropdownSelected.textContent = 'Search By: Item Name'; // restore initial label
+dropdownSelected.textContent = 'Search By: Item Name';
 const dropdownOptions = document.getElementById('dropdownOptions');
 const sortSelected = document.getElementById('sortSelected');
 const sortOptions = document.getElementById('sortOptions');
@@ -1014,67 +1014,68 @@ const filtersButton = document.getElementById('filtersButton');
 const filtersOptions = document.getElementById('filtersOptions');
 const clearFiltersBtn = document.querySelector('.clear-filters');
 
-// --- Utility ---
-function closeAllDropdowns(except = null) {
-  if (except !== dropdownSelected) {
-    dropdownOptions.style.display = 'none';
-    dropdownSelected.classList.remove('open');
-  }
-  if (except !== sortSelected) {
-    sortOptions.style.display = 'none';
-    sortSelected.classList.remove('open');
-  }
-  if (except !== filtersButton) {
+// Close all dropdowns, optionally ignoring filters
+function closeAllDropdowns(ignoreFilters = false) {
+  dropdownOptions.style.display = 'none';
+  dropdownSelected.classList.remove('open');
+  sortOptions.style.display = 'none';
+  sortSelected.classList.remove('open');
+
+  if (!ignoreFilters) {
     filtersOptions.style.display = 'none';
     filtersButton.classList.remove('open');
   }
 }
 
-// --- Dropdown clicks ---
+// Search By dropdown
 dropdownSelected.addEventListener('click', e => {
   e.stopPropagation();
   const isOpen = dropdownOptions.style.display === 'block';
-  closeAllDropdowns(dropdownSelected);
-  dropdownOptions.style.display = isOpen ? 'none' : 'block';
-  dropdownSelected.classList.toggle('open', !isOpen);
+  closeAllDropdowns();
+  if (!isOpen) {
+    dropdownOptions.style.display = 'block';
+    dropdownSelected.classList.add('open');
+  }
 });
 
+// Sort By dropdown
 sortSelected.addEventListener('click', e => {
   e.stopPropagation();
   const isOpen = sortOptions.style.display === 'block';
-  closeAllDropdowns(sortSelected);
-  sortOptions.style.display = isOpen ? 'none' : 'block';
-  sortSelected.classList.toggle('open', !isOpen);
+  closeAllDropdowns();
+  if (!isOpen) {
+    sortOptions.style.display = 'block';
+    sortSelected.classList.add('open');
+  }
 });
 
+// Close all on document click
+document.addEventListener('click', () => closeAllDropdowns());
+
+// Filters dropdown
 filtersButton.addEventListener('click', e => {
   e.stopPropagation();
   const isOpen = filtersOptions.style.display === 'block';
-  closeAllDropdowns(filtersButton);
+  closeAllDropdowns(true); // Close others but not filters
   filtersOptions.style.display = isOpen ? 'none' : 'block';
   filtersButton.classList.toggle('open', !isOpen);
 });
 
-// Prevent clicks inside filters from closing
 filtersOptions.addEventListener('click', e => e.stopPropagation());
 
-// --- Clear filters (does open/close anything) ---
+// Clear filters button
 clearFiltersBtn.addEventListener('click', e => {
-  e.stopPropagation(); // prevent bubbling
-  // Clear selected filter buttons
+  e.stopPropagation();
+  // Remove selected states
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
-  // Close all other dropdowns (but not filters)
-  closeAllDropdowns(filtersButton);
+  // Close other dropdowns
+  closeAllDropdowns(true);
 });
 
-
-// --- Individual filter buttons ---
+// Toggle filter buttons
 filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
   btn.addEventListener('click', () => btn.classList.toggle('selected'));
 });
-
-// --- Close all dropdowns if clicked outside ---
-document.addEventListener('click', () => closeAllDropdowns());
 
 
 // --- Filters logic ---
