--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1061,11 +1061,12 @@ clearFiltersBtn.addEventListener('click', e => {
   e.stopPropagation();
   // Remove selected states
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
-  // Close other dropdowns (not filters)
+  // Close other dropdowns (Search By / Sort By)
   dropdownOptions.style.display = 'none';
   dropdownSelected.classList.remove('open');
   sortOptions.style.display = 'none';
   sortSelected.classList.remove('open');
+  // DO NOT touch filters dropdown here
 });
 
 // --- Filter buttons toggle ---
@@ -1075,6 +1076,7 @@ filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
 
 // --- Close all dropdowns on document click ---
 document.addEventListener('click', () => closeAllDropdowns());
+
 
 
 // --- Filters logic ---
