--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1014,7 +1014,7 @@ const filtersOptions = document.getElementById('filtersOptions');
 const clearFiltersBtn = document.querySelector('.clear-filters');
 
 // --- Utility to close dropdowns ---
-function closeAllDropdowns(excludeFilters = false) {
+function closeAllDropdowns({ excludeFilters = false } = {}) {
   // Close Search By
   dropdownOptions.style.display = 'none';
   dropdownSelected.classList.remove('open');
@@ -1030,10 +1030,10 @@ function closeAllDropdowns(excludeFilters = false) {
   }
 }
 
-// --- Toggle handler helper ---
+// --- Dropdown toggle helper ---
 function toggleDropdown(button, options) {
   const isOpen = options.style.display === 'block';
-  closeAllDropdowns(true); // Always leave filters alone when opening another
+  closeAllDropdowns(); // Close everything first
   if (!isOpen) {
     options.style.display = 'block';
     button.classList.add('open');
@@ -1063,13 +1063,13 @@ clearFiltersBtn.addEventListener('click', e => {
   e.stopPropagation(); // Prevent document click
   // Remove selected states
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
-  // Close only other dropdowns, leave filters as-is
-  closeAllDropdowns(true);
+
+  // Only close other dropdowns, leave filters as-is
+  closeAllDropdowns({ excludeFilters: true });
 });
 
 // --- Close all dropdowns on document click ---
 document.addEventListener('click', () => closeAllDropdowns());
-
 
 
 // --- Filters logic ---
