--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -560,6 +560,14 @@
   border-bottom-right-radius: 0;
 }
 
+.dropdown-options {
+  display: none;
+}
+.dropdown-options.open {
+  display: block;
+}
+
+
 .clear-filters {
   margin-top: 4px;               /* reduce gap above button */
   padding: 4px 8px;              /* small button */
@@ -1015,42 +1023,47 @@ const clearFiltersBtn = document.querySelector('.clear-filters');
 
 // --- Utility to close dropdowns ---
 function closeAllDropdowns({ excludeFilters = false } = {}) {
-  // Close Search By
-  dropdownOptions.style.display = 'none';
   dropdownSelected.classList.remove('open');
+  dropdownOptions.classList.remove('open');
 
-  // Close Sort By
-  sortOptions.style.display = 'none';
   sortSelected.classList.remove('open');
+  sortOptions.classList.remove('open');
 
-  // Close Filters only if not excluded
   if (!excludeFilters) {
-    filtersOptions.style.display = 'none';
     filtersButton.classList.remove('open');
+    filtersOptions.classList.remove('open');
   }
 }
 
-// --- Dropdown toggle helper ---
+// --- Toggle a dropdown ---
 function toggleDropdown(button, options) {
-  const isOpen = options.style.display === 'block';
-  closeAllDropdowns(); // Close everything first
+  const isOpen = options.classList.contains('open');
+  closeAllDropdowns(); // close everything first
   if (!isOpen) {
-    options.style.display = 'block';
     button.classList.add('open');
+    options.classList.add('open');
   }
 }
 
-// --- Dropdown click handlers ---
-dropdownSelected.addEventListener('click', e => { e.stopPropagation(); toggleDropdown(dropdownSelected, dropdownOptions); });
-sortSelected.addEventListener('click', e => { e.stopPropagation(); toggleDropdown(sortSelected, sortOptions); });
+// --- Click handlers ---
+dropdownSelected.addEventListener('click', e => {
+  e.stopPropagation();
+  toggleDropdown(dropdownSelected, dropdownOptions);
+});
+
+sortSelected.addEventListener('click', e => {
+  e.stopPropagation();
+  toggleDropdown(sortSelected, sortOptions);
+});
+
 filtersButton.addEventListener('click', e => {
   e.stopPropagation();
-  const isOpen = filtersOptions.style.display === 'block';
-  filtersOptions.style.display = isOpen ? 'none' : 'block';
+  const isOpen = filtersOptions.classList.contains('open');
+  filtersOptions.classList.toggle('open', !isOpen);
   filtersButton.classList.toggle('open', !isOpen);
 });
 
-// --- Stop clicks inside filters from bubbling ---
+// Stop clicks inside filters from bubbling
 filtersOptions.addEventListener('click', e => e.stopPropagation());
 
 // --- Filter buttons toggle ---
@@ -1060,16 +1073,16 @@ filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
 
 // --- Clear filters button ---
 clearFiltersBtn.addEventListener('click', e => {
-  e.stopPropagation(); // Prevent document click
+  e.stopPropagation();
   // Remove selected states
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
-
-  // Only close other dropdowns, leave filters as-is
+  // Close other dropdowns, leave filters open
   closeAllDropdowns({ excludeFilters: true });
 });
 
 // --- Close all dropdowns on document click ---
 document.addEventListener('click', () => closeAllDropdowns());
+
 
 
 // --- Filters logic ---
