--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -560,14 +560,6 @@
   border-bottom-right-radius: 0;
 }
 
-.dropdown-options {
-  display: none;
-}
-.dropdown-options.open {
-  display: block;
-}
-
-
 .clear-filters {
   margin-top: 4px;               /* reduce gap above button */
   padding: 4px 8px;              /* small button */
@@ -1012,8 +1004,9 @@ fetch('final_workshop_db.json')
     document.getElementById('results').innerHTML = '<li>Error loading database.</li>';
   });
 
-// --- Dropdown elements ---
+// --- Dropdowns ---
 const dropdownSelected = document.getElementById('dropdownSelected');
+dropdownSelected.textContent = 'Search By: Item Name';
 const dropdownOptions = document.getElementById('dropdownOptions');
 const sortSelected = document.getElementById('sortSelected');
 const sortOptions = document.getElementById('sortOptions');
@@ -1021,68 +1014,72 @@ const filtersButton = document.getElementById('filtersButton');
 const filtersOptions = document.getElementById('filtersOptions');
 const clearFiltersBtn = document.querySelector('.clear-filters');
 
-// --- Utility to close dropdowns ---
-function closeAllDropdowns({ excludeFilters = false } = {}) {
+// Close all dropdowns, optionally ignoring filters
+function closeAllDropdowns(ignoreFilters = false) {
+  dropdownOptions.style.display = 'none';
   dropdownSelected.classList.remove('open');
-  dropdownOptions.classList.remove('open');
-
+  sortOptions.style.display = 'none';
   sortSelected.classList.remove('open');
-  sortOptions.classList.remove('open');
 
-  if (!excludeFilters) {
+  if (!ignoreFilters) {
+    filtersOptions.style.display = 'none';
     filtersButton.classList.remove('open');
-    filtersOptions.classList.remove('open');
   }
 }
 
-// --- Toggle a dropdown ---
-function toggleDropdown(button, options) {
-  const isOpen = options.classList.contains('open');
-  closeAllDropdowns(); // close everything first
-  if (!isOpen) {
-    button.classList.add('open');
-    options.classList.add('open');
-  }
-}
-
-// --- Click handlers ---
+// Search By dropdown
 dropdownSelected.addEventListener('click', e => {
   e.stopPropagation();
-  toggleDropdown(dropdownSelected, dropdownOptions);
+  const isOpen = dropdownOptions.style.display === 'block';
+  closeAllDropdowns();
+  if (!isOpen) {
+    dropdownOptions.style.display = 'block';
+    dropdownSelected.classList.add('open');
+  }
 });
 
+// Sort By dropdown
 sortSelected.addEventListener('click', e => {
   e.stopPropagation();
-  toggleDropdown(sortSelected, sortOptions);
+  const isOpen = sortOptions.style.display === 'block';
+  closeAllDropdowns();
+  if (!isOpen) {
+    sortOptions.style.display = 'block';
+    sortSelected.classList.add('open');
+  }
 });
 
+// Close all on document click
+document.addEventListener('click', () => closeAllDropdowns());
+
+// Filters dropdown
 filtersButton.addEventListener('click', e => {
   e.stopPropagation();
-  const isOpen = filtersOptions.classList.contains('open');
-  filtersOptions.classList.toggle('open', !isOpen);
+  const isOpen = filtersOptions.style.display === 'block';
+  closeAllDropdowns(true); // Close others but not filters
+  filtersOptions.style.display = isOpen ? 'none' : 'block';
   filtersButton.classList.toggle('open', !isOpen);
 });
 
-// Stop clicks inside filters from bubbling
 filtersOptions.addEventListener('click', e => e.stopPropagation());
 
-// --- Filter buttons toggle ---
-filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
-  btn.addEventListener('click', () => btn.classList.toggle('selected'));
-});
-
-// --- Clear filters button ---
+// Clear filters button
 clearFiltersBtn.addEventListener('click', e => {
   e.stopPropagation();
   // Remove selected states
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
-  // Close other dropdowns, leave filters open
-  closeAllDropdowns({ excludeFilters: true });
+  // Close only non-filter dropdowns
+  dropdownOptions.style.display = 'none';
+  dropdownSelected.classList.remove('open');
+  sortOptions.style.display = 'none';
+  sortSelected.classList.remove('open');
 });
 
-// --- Close all dropdowns on document click ---
-document.addEventListener('click', () => closeAllDropdowns());
 
+// Toggle filter buttons
+filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
+  btn.addEventListener('click', () => btn.classList.toggle('selected'));
+});
 
 
 // --- Filters logic ---
