--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1066,15 +1066,19 @@ filtersOptions.addEventListener('click', e => e.stopPropagation());
 // Clear filters button
 clearFiltersBtn.addEventListener('click', e => {
   e.stopPropagation();
+
+  // Only act if filters dropdown is already open
+  if (filtersOptions.style.display !== 'block') return;
+
   // Remove selected states
   filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
+
   // Close only non-filter dropdowns
   dropdownOptions.style.display = 'none';
   dropdownSelected.classList.remove('open');
   sortOptions.style.display = 'none';
   sortSelected.classList.remove('open');
 });
-
 
 // Toggle filter buttons
 filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
